# Physical-AI-Humanoid-Robotics

./: .gitignore  CHAPTERS_STRUCTURE.md  CLAUDE.md  COURSE_DETAIL.md  README.md
.claude/: settings.local.json
.claude/agents/: auth-engineer.md  book-architect.md  docusaurus-i18n-specialist.md  exercise-designer.md  isaac-specialist.md  physical-ai-author.md  rag-backend-expert.md  ros2-code-generator.md  simulation-expert.md  spec-validator.md  summary-writer.md  urdf-builder.md  vla-integrator.md
.claude/skills/docusaurus-style/: SKILL.md
.claude/skills/exercise-patterns/: SKILL.md
.claude/skills/frontend-architect/: SKILL.md
.claude/skills/frontend-develpment/: SKILL.md
.claude/skills/issac_patterns/: SKILL.md
.claude/skills/mermaid-diagram-generator/: SKILL.md
.claude/skills/rag-rchitecture/: SKILL.md
.claude/skills/ros2-code-example-writer/: SKILL.md
.claude/skills/ros2-mermaid-patterns/: SKILL.MD
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
auth-service/src/: auth.ts  index.ts
backend/: .gitignore  .python-version  ingest.py  pyproject.toml  requirements.txt
backend/app/: agent.py  config.py  main.py
backend/app/api/: chat.py  health.py
backend/app/middleware/: cors.py  error_handler.py  rate_limit.py
backend/app/services/: agent_service.py  embeddings.py  generation.py  qdrant_client.py  query_processor.py
backend/scripts/: ingest_docs.py  verify_rag_flow.py
backend/tests/: test_agent_live.py
backend/tests/unit/: test_chat_api.py  test_docs.py
content-tools/: pyproject.toml
content-tools/scripts/: generate_chapters.py  validate_content.py
frontend/: .env.example  .eslintignore  .gitignore  .npmignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  vercel.json  verify-i18n.js
frontend/docs/: index.md
frontend/src/: translation-manifest.json
history/adr/: adr-001-book-architecture-and-content-structure.md  adr-001-documenting-book-architecture-adrs.md  adr-002-frontend-technology-stack.md  adr-003-content-file-formats-and-conventions.md  adr-004-frontend-deployment-strategy.md  adr-005-docusaurus-frontend-styling-architecture.md
scripts/: generate-translation-manifest.js
specs/001-book-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-chapter3-architecture/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docusaurus-styling/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-frontend-design/: plan.md  spec.md  tasks.md
specs/001-physical-ai-architecture/: plan.md  spec.md  tasks.md
specs/001-physical-ai-textbook/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-part1-foundations-lab/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-urdu-translation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+159 files in other folders)
