[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "black==24.2.0",
    "email-validator==2.1.0",
    "fastapi==0.110.0",
    "fastembed>=0.7.3",
    "google-generativeai==0.3.2",
    "httpx>=0.26.0",
    "mypy==1.8.0",
    "openai>=1.59.0",
    "openai-agents>=0.0.7",
    "passlib==1.7.4",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.10.0",
    "pydantic-settings==2.1.0",
    "pylint==3.0.3",
    "pytest==8.0.1",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "python-dotenv==1.0.1",
    "python-frontmatter==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "qdrant-client==1.7.3",
    "slowapi==0.1.9",
    "tqdm==4.66.2",
    "uvicorn[standard]==0.27.1",
]
