[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg==0.29.0",
    "bcrypt==4.1.2",
    "black==24.2.0",
    "email-validator==2.1.0",
    "fastapi>=0.109.0",
    "fastembed>=0.7.3",
    "google-generativeai==0.3.2",
    "httpx>=0.26.0",
    "mypy==1.8.0",
    "openai>=1.12.0",
    "openai-agents>=0.0.7",
    "passlib==1.7.4",
    "psycopg[binary]",
    "pydantic[email]>=2.5.0",
    "pydantic-settings==2.1.0",
    "pylint==3.0.3",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov==4.1.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "qdrant-client>=1.10.0",
    "slowapi==0.1.9",
    "tqdm==4.66.2",
    "uvicorn[standard]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "psycopg2-binary>=2.9.9",
    "sse-starlette>=1.8.0",
    "hypothesis>=6.92.0",
    "nest-asyncio>=1.6.0",
]
